syntax = "proto3";

package contracts.services.gateway.cards;

import "contracts/services/cards/card.proto";

message IssuePhysicalCardRequest {
  string user_id = 1;
  string account_id = 2;
}

message IssuePhysicalCardResponse {
  contracts.services.cards.Card card = 1;
}